# CrossPlaformSerial

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NOTICE  README.md
android/java/com/cps/android/: CpsPortInfo.java  CpsUsbSerial.java
android/stubs/androidx/annotation/: IntDef.java
android/stubs/com/hoho/android/usbserial/: BuildConfig.java
cmake/: cpsConfig.cmake.in  cps_dex.cmake  cps_dex_embed.cmake
docs/: android.md
examples/: CMakeLists.txt  android_snippet.cpp  c_minimal.c  cpp_list_ports.cpp
examples/go/: README.md  go.mod  main.go
examples/qt_serial/: CMakeLists.txt  Main.qml  README.md  main.cpp  portlistmodel.cpp  portlistmodel.h  serialcontroller.cpp  serialcontroller.h
examples/qt_serial/android/res/xml/: device_filter.xml
examples/qt_serial_cabi/: CMakeLists.txt  Main.qml  README.md  cabicontroller.cpp  cabicontroller.h  main.cpp  portlistmodel_cabi.cpp  portlistmodel_cabi.h
include/cps/: SerialPort.hpp  SerialPortInfo.hpp  SerialTypes.hpp  cps.h  cps_export.h
scripts/: build-android.ps1  build-android.sh
src/: CAbi.cpp  SerialPort.cpp  SerialPortInfo.cpp
src/detail/: AndroidBackend.cpp  AndroidBackend.hpp  AsioBackend.cpp  AsioBackend.hpp  PortEnumerator.cpp  PortEnumerator.hpp  ReadBuffer.hpp  SerialBackend.hpp
